# walkwise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STEP4_MANIFEST.json  STEP4_README.md  docker-compose.yml  electron-builder.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
docs/commands/: ai.md  (+44 more)
dumps/: dump_all_files.py
electron/: env.d.ts
release/: checklist.md
resources/: release-manifest.json
script/: __init__.py
scripts/: check_markdown_links.py  finalize-dist.mjs
tests/: README.md  STEP3_MANIFEST.json  conftest.py  test_ai_budget.py  test_ai_cache.py  test_ai_client_contract.py  test_ai_routing.py  test_approval_invalidation.py  test_approval_workflow.py  test_artifact_service.py  test_asr_verification.py  test_atomic_file_write.py  test_audio_cache.py  test_audio_packaging.py  test_audio_preview.py  test_audio_synthesis.py  test_audio_thresholds.py  test_audio_validation.py  test_backup_restore.py  test_build_execution_pipeline.py  test_build_pipeline.py  test_build_request_service.py  test_build_target_resolution.py  test_chapter_spec_schema.py  test_character_profiles.py  test_claim_validation.py  test_claims_pipeline.py  test_coeiroink_adapter.py  test_coeiroink_client.py  test_container_contract.py  test_core_config.py  test_core_errors.py  test_core_logging.py  test_coverage_map.py  test_credit_manifest.py  test_curriculum_pipeline.py  test_database_connection.py  test_domain_models.py  test_domain_validation.py  test_draft_generation.py  (+60 more)
(+521 files in other folders)
