[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "walkwise"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "unit: isolated unit tests",
  "integration_mock: integration tests with mocked external dependencies",
  "integration_smoke: explicit lightweight connectivity checks",
  "integration_live: explicit live functionality tests after connectivity succeeds",
  "e2e: end-to-end tests",
  "performance: opt-in performance tests",
  "resilience: opt-in fault-injection and recovery tests",
  "static: static contract checks",
  "contract: public contract checks",
]
